--- a/index.Rmd
+++ b/index.Rmd
@@ -235,59 +235,46 @@ You will complete weekly assignments in [Gradescope](https://www.gradescope.com/
 
 ### Midterm exams (30%)
 
-There will be two midterm exams, each consisting two parts: a group portion and an individual portion.  Both portions will be taken in class during your normal in-class time on subsequent days. A practice individual exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+There will be two midterm exams, each consisting two parts: a group portion and an individual portion.  Both portions will be taken in class during your normal in-class time on subsequent days (Group exams on Wednesdays, Individual exams on Fridays). A practice individual exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
 
 #### _Group portion_:
 
-Group individual exams will be **December 4th and 6th (during normal class time)**. 
+Group midterm exams will be **Wednesday February 12 and Wednesday March 26 (during normal class time)**. 
 
-* The group portion of the final exam will be worth 20% of your final exam grade.
-* The group final exam is open book, open notes. 
-* You will be allowed a calculator on the group final exam. 
-* You **will** be required to use RStudio on the group final exam.
-* **If you miss more than 3 class days in Unit 3, you must complete the group exam individually.**
+* The group portion of the midterm exams will be worth 20% of your midterm exam grade.
+* The group midterm exams are open book, open resources provided by Stat 216 instructors (anything posted to D2L or feedback found in Gradescope) 
+* You will be allowed a calculator on the group midterm exams. 
+* You **will** be required to use RStudio on the group midterm exams.
+* **If you miss more than 3 class days in a unit, you must complete the group midterm exam for that unit individually.**
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **TBD**. 
+Individual midterm exams will be **Friday February 14 and Friday March 26 (during normal class time)**. 
 
-* The individual portion of the final exam will be worth 80% of your final exam grade.
-* No potential final exam questions will be released.
-* The individual final exam is closed book. 
-* You will be allowed to create a one page note sheet for the exam.  You will also be provided a one page formula sheet during the exam.
-* You will be allowed a calculator on the individual final exam. 
-* You will **not** be required to use RStudio on the individual final exams.
-* Understand that attending that common hour exam is part of your commitment when you enroll in the course.
-
-There will be two midterm exams (worth 15% of the course grade each). Midterm exams will be taken in class during your normal in-class time. A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
-
-Individual midterm exam 1 will be **September 18th**; Individual midterm exam 2 will be **October 23rd**. 
-
-* Potential midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
-* On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.
-* Midterm exams are closed book, closed notes. 
-* A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).
-* You will be allowed a calculator on the midterm exams. 
-* You will **not** be required to use RStudio on the midterm exams.
-
-The Monday following each exam, we will have a 15-minute exam reflection.  This will consist of questions from your exam which you will answer in your assigned groups.  The exam reflections will count as 5% of your midterm exam grade.  **If a student misses more than 3 classes within a unit, they will be required to complete the exam reflection on their own.**
+* The individual portion of the midterm exams will be worth 80% of your midterm exam grade.
+<!-- * Potential midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set. -->
+<!-- * On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam. -->
+* The individual midterm exams are closed book, closed note. 
+* You will be allowed to create a one page note sheet for each individual exam.  You will also be provided a one page formula sheet during the exam.
+* You will be allowed a calculator on the individual midterm exam. 
+* You will **not** be required to use RStudio on the individual midterm exams.
 
 
 ### Final exam (30%)
 
-The final exam will consist of two parts: a group portion and an individual portion.  The group final exam will be taken in class during your normal in-class time on the final Wednesday and Friday of classes (prior to Finals week). A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+The final exam will consist of two parts: a group portion and an individual portion.  The group final exam will be taken in class during your normal in-class time on the final Wednesday and Friday of classes (prior to Finals week). A practice individual exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
 
-The individual final exam is a common hour exam. **Understand that attending that common hour exam is part of your commitment when you enroll in the course.**
+The individual final exam is a common hour exam with the date/time set by the Registrar. **Understand that attending that common hour exam is part of your commitment when you enroll in the course.**
 
 #### _Group portion_:
 
-Group final exam will be **December 4th and 6th (during normal class time)**. 
+Group final exam will be **Wednesday April 30 and Friday May 2 (during normal class time)**. 
 
 * The group portion of the final exam will be worth 20% of your final exam grade.
 * The group final exam is open book, open notes. 
 * You will be allowed a calculator on the group final exam. 
 * You **will** be required to use RStudio on the group final exam.
-* **If you miss more than 3 class days in Unit 3, you must complete the group exam individually.**
+* **If you miss more than 3 class days in Unit 3, you must complete the group final exam individually.**
 
 #### _Individual portion_:
 
@@ -326,20 +313,24 @@ The grade cutoffs may be shifted _downward_ at the end of the semester based on 
 
 # Late work policies
 
-Note: we **highly** recommend saving your answers for each question while you complete all work in Gradescope.  This will ensure you can return to labs, lecture quizzes, or assignments at a later date without fear of losing any progress.  Additionally, Gradescope will automatically submit any saved work when the due date passes, ensuring you earn up to full credit for all problems completed on time.
+Note: we **highly** recommend saving your answers for each question while you complete all work in Gradescope.  This will ensure you can return to labs, video/reading quizzes, exit tickets, or assignments at a later date without fear of losing any progress.  Additionally, Gradescope will automatically submit any saved work when the due date passes, ensuring you earn up to full credit for all problems completed on time.
 
-* **Video/Reading Quizzes**: 
-    - You may take the video/reading quizzes in Gradescope as many times as you like up until the due date using the Resubmit button to re-open a quiz. 
-    <!-- - While the due date is Tuesdays at 9pm, you will be allowed to turn in lecture quizzes until 11:59pm on the due date.  Lecture quiz submissions that are received between 9pm and 11:59pm will receive a 5% grade deduction. -->
+* **Video/Reading Quizzes and Assignments**: 
+    - You may take the video/reading quizzes or assignments in Gradescope as many times as you like up until the due date using the Resubmit button to re-open a quiz. 
     - Extensions on these quizzes are not given unless extenuating circumstances are present which are communicated to the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu).
+    
+* **Exit Tickets and Labs**: 
+    - You may take the exit tickets and Labs in Gradescope as many times as you like up until the due date using the Resubmit button to re-open an assessment 
+    - If you miss class and email your section instructor about your absence **prior to class time**, you will be given a 24-hour extension to complete the exit ticket or lab.
+    - Further extensions on exit tickets or labs, or when an absence is not communicated prior to class time, are not given unless extenuating circumstances are present. Please email the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu) if you feel your missed exit ticket or lab falls into this category.
 
-* **Activities, Labs, and Assignments**: Attendance in this course is critical for success and is therefore required. The in-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three activities per Unit, no questions asked, but are requested to communicate with their section instructor anytime they miss class. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
-    - For illnesses or when students cannot attend class, we recommend that the student WebEx into class with their group (or any video conferencing tool of choice). Students attending class remotely can show their activity via WebEx for credit. WebEx should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). 
+* **Activities**: Attendance in this course is critical for success and is therefore required. The in-class activity, exit tickets, and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three class days per Unit, no questions asked, but are requested to communicate with their section instructor anytime they miss class. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
+    - For illnesses or when students cannot attend class, we recommend that the student video conference into class with their group (preferrably using WebEx or Zoom). Students attending class remotely can show their activity and participate in the exit ticket over video conference for credit. Video conferencing should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). 
     - If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your section instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your section instructor will determine an appropriate extension on the lab based on your individual circumstances.
     - For labs and assignments, while the due dates are 9 pm on the day the lab is completed in class and Mondays, respectively, you will be allowed to turn in work until 11:59 pm on the due date.  Lab and assignment submissions that are received between 9 pm and 11:59 pm will receive a 5% grade deduction.  
 
 * **Exams**: 
-    - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  The group final exam may be taken remotely and proctored via WebEx but all individual exams must be taken in person.
+    - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  The group exams may be taken remotely and proctored via WebEx but all individual exams must be taken in person.
     - If you are ill to the point of not being able to take the exam, please email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  
     - Students who miss the exam without contacting the instructor prior to the exam will receive a zero on the exam.
     - Work is not a legitimate reason for an exam absence.
@@ -394,6 +385,8 @@ This syllabus, course lectures and presentations, and any course materials provi
 ---
 # Policy on the use of AI language models{#AI}
 
-In this course, you may utilize generative AI language models, including ChatGPT, as a resource to support your work except during in-class exams. AI language models are powerful tools developed to generate text based on the input provided. While the AI language models can help refine your writing and coding, it is important to remember that it is an AI system and not a substitute for your critical thinking and creativity. If you choose to use this tool, apply it as a supplement and do not rely solely on its suggestions. Ultimately, you are responsible for the content and quality of your work. Therefore, you should critically evaluate ChatGPT outputs for accuracy, potential bias, and relevancy. When utilizing AI language models, it is essential to ensure that your writing and coding remains original and properly attributed, including citing outputs or text generated by ChatGPT. **If you choose to use AI language models to assist you on labs or assignments, you must cite the source used. Failure to do so will result in earning a 0 on all problems in which AI language models usage has been detected.**
+In this course, you may utilize generative AI language models, including ChatGPT, as a resource to support your work except during in-class exams. AI language models are powerful tools developed to generate text based on the input provided. **While the AI language models can help refine your writing and coding, it is important to remember that it is an AI system and not a substitute for your critical thinking and creativity. Due to the nature of statistics and this course, an AI-generated answer may be incomplete, overly complex, or even incorrect.** If you do not understand a concept or a question asked, we *highly* recommend visiting the [Math and Stats Center](https://math.montana.edu/undergrad/msc/), emailing or visiting with a member of your instructional team, or using the search feature within the online textbook before turning to Google or AI.
+
+If you choose to use this tool, apply it as a supplement and do not rely solely on its suggestions. Ultimately, you are responsible for the content and quality of your work. Therefore, you should critically evaluate ChatGPT outputs for accuracy, potential bias, and relevancy. When utilizing AI language models, it is essential to ensure that your writing and coding remains original and properly attributed, including citing outputs or text generated by ChatGPT. **If you choose to use AI language models to assist you on labs or assignments, you must cite the source used. Failure to do so will result in earning a 0 on all problems in which AI language models usage has been detected.**
 
 Please see the How to cite ChatGPT in MLA Style [resource](https://style.mla.org/citing-generative-ai/). We encourage you to use AI language models to enhance your writing and coding skills, experiment with its capabilities, and learn from its suggestions. If you have any questions or concerns regarding using AI language models for assignments, please discuss them with us.
