Individual final date added

--- a/index.Rmd
+++ b/index.Rmd
@@ -249,7 +249,7 @@ Group midterm exams will be **Wednesday February 12 and Wednesday March 26 (duri
 
 #### _Individual portion_:
 
-Individual midterm exams will be **Friday February 14 and Friday March 26 (during normal class time)**. 
+Individual midterm exams will be **Friday February 14 and Friday March 28 (during normal class time)**. 
 
 * The individual portion of the midterm exams will be worth 80% of your midterm exam grade.
 <!-- * Potential midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set. -->
@@ -278,7 +278,7 @@ Group final exam will be **Wednesday April 30 and Friday May 2 (during normal cl
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **TBD**. 
+Individual common hour final exam will be **Tuesday, May 6th, from 12:00 - 1:50 pm**. 
 
 * The individual portion of the final exam will be worth 80% of your final exam grade.
 * No potential final exam questions will be released.
