--- a/index.Rmd
+++ b/index.Rmd
@@ -319,16 +319,18 @@ Note: we **highly** recommend saving your answers for each question while you co
 * **Video/Reading Quizzes and Assignments**: 
     - You may take the video/reading quizzes or assignments in Gradescope as many times as you like up until the due date using the Resubmit button to re-open a quiz. 
     - Extensions on these quizzes are not given unless extenuating circumstances are present which are communicated to the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu).
+    - For assignments, while the due dates are 9 pm on Mondays, you will be allowed to turn in work until 11:59 pm on the due date.  Assignment submissions that are received between 9 pm and 11:59 pm will receive a 5% grade deduction. 
     
 * **Exit Tickets and Labs**: 
     - You may take the exit tickets and Labs in Gradescope as many times as you like up until the due date using the Resubmit button to re-open an assessment 
     - If you miss class and email your section instructor about your absence **prior to class time**, you will be given a 24-hour extension to complete the exit ticket or lab.
     - Further extensions on exit tickets or labs, or when an absence is not communicated prior to class time, are not given unless extenuating circumstances are present. Please email the Student Success Coordinator, [Jade Schmidt](jade.schmidt2@montana.edu) if you feel your missed exit ticket or lab falls into this category.
+    - For labs, while the due dates are 9 pm on the day the lab is completed in class, you will be allowed to turn in work until 11:59 pm on the due date.  Lab submissions that are received between 9 pm and 11:59 pm will receive a 5% grade deduction. 
 
 * **Activities**: Attendance in this course is critical for success and is therefore required. The in-class activity, exit tickets, and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three class days per Unit, no questions asked, but are requested to communicate with their section instructor anytime they miss class. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. 
     - For illnesses or when students cannot attend class, we recommend that the student video conference into class with their group (preferrably using WebEx or Zoom). Students attending class remotely can show their activity and participate in the exit ticket over video conference for credit. Video conferencing should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). 
     - If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your section instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your section instructor will determine an appropriate extension on the lab based on your individual circumstances.
-    - For labs and assignments, while the due dates are 9 pm on the day the lab is completed in class and Mondays, respectively, you will be allowed to turn in work until 11:59 pm on the due date.  Lab and assignment submissions that are received between 9 pm and 11:59 pm will receive a 5% grade deduction.  
+ 
 
 * **Exams**: 
     - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  The group exams may be taken remotely and proctored via WebEx but all individual exams must be taken in person.
